--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="geral">
             <div id="cabecalho">
                 <h1 style ="text-align:center;" >
-                   <img src="https://lh3.googleusercontent.com/uQyvlKTv2WadEUVGLa4EVkP8FwYltLsBxF2uUyhuWxTzkvR3f5YLE7kCRqmjS-dY66-xpXfO5qiYZd4YMCEIHVWF8Zg4s7m98N2fRx7rHKPb9dDyb2KFuXfeGIzLmrHDKFYa6NVXqXouQHbQq94XF6LREOd93dnhsxu3rxZLgESqM2IfcGSS0IF5-jol8tb7x1tjgFnVGjoPV5-r9HoQFF3uoKGOoIIuZemAjIscPWKdoPmPbHJkneKgVI6DFqYUMDnxUmaOihThpqTGc6A9LuF8eXkKabgPxe1Ar1ysxuafLHhaIwk2MOiSVazNkrhKl649i7D7cc-fNuPVV2EQofi4ERjX8zhaq2Ohh40bVwgw3rieBkLNryH5IulQNsKCi-AlFGJYqdKN-Zahv4eQxFVLcDLq_J0h1Ba5-8toCwtuZqvxUVCvJPWMjGnh7OwFT6LUQtvWE1aOv5YwR90IXz7IYM88x9cvxNZ1GFVAj01w3H24cmLtfaU4KPDG-nzoSwiLKJnr8nNQjmNhcsKfbcU2siaGwaTYtkn75IAERPCuQbu0nHWlRdtJvzIAYXPoNDZyuECUU-bcnQsFjZLJDofSqxJoppNZkHxh_6Hp26DAETgEUko-oBcUXCHqj77vbHOAnPKe7-wtDgdrCzvZwzJLFv_nrEbxcCya0iKZHNEvysx_WfXhpB4dDFiymWKGHzJb7891g8T1ml1BwaIgfB7N5JR0iIwBVXb3yzOvtOw_rWn_idjaBWKYofDl0Q=s500-no?authuser=0" witch = "300px" height = "400px" class="rounded-circle"/>
+                   <img src="logo.png" witch = "300px" height = "400px" class="rounded-circle"/>
                 </h1>
             </div>
             <div id="principal">
@@ -165,7 +165,7 @@
 
             <div id="rodape"></div>
             <p style= "text-align:center;" > <b>ENTRE EM CONTATOS ATRAVÉS DO WHATSAPP</b> </p>
-            <img src= "https://lh3.googleusercontent.com/pL9B9bstN-Z1QhKE0iwxKDONbu7ILPkCX-pClfGPyV8C2QCmOWnmcysTzKMzBsqi9lPwl6GW3MVYrXHpioUxdK8JeDQKy_9C1iaOzt7DzBgEM8Tcggr8y-ZaehMl5_1jY081_JFLyaA_mQVi0_iItFFpFbHDwDyv9mwkvtdrNI7UDqhoJgGJew5UPKkdXns5o-lsgg66Y_f3cVFlqAp69mSGUIpbXpKghmo7ejmG5N-RKhBdkKeasXiUCD0s10e75Xvex6ybO0KEbon2HfXI1Fj7LLZmu-VmqprHpzrSm3hAAO1HfmZElmk_DH6SqF1AZk7HCv2528gnFnjHc2DoT0K8JCP2icLLlK3CBaN7Gg-B3jjGpM3bJBwmbmcbzCSrIDkalWTzlc9OJ1J7FLve0HxtDRpnFDqD4EuvTNgL66OdQkzw6GPRfcYV5itaFYhsiCR1C9n4ZR2HiDzSokQ7lb8I2k5oOI9TW5R8GGPLDwHqwnhW-iGK9Sn_IqjZoQTsRcvLeRmejfv7S5ZdEY5P3TjXKKUCmFh3NIJ44ieOZzZVKZrJZMPdUQlhEJn1WptxPHlKZbBwy4wwR4brtclAsrAUVbNnqEdMzeupyb8buQyKXgTCAZYAKIphi8HlssHK1ILpaY27aiVJPMLYygGVeCACzxtvsoAP04oBj81pgGI3QW3CltRbLN64NoF8zkG4jtApQj9Jrt5NzkLLWE6YokrGFOo3lspqEBpPndXtBtdMRTmpv8VqEo8rNckbvA=w1006-h566-no?authuser=0" witch = "300px" height = "539px" style = "float : left" /> 
+            <img src= "qr.png" witch = "300px" height = "539px" style = "float : left" /> 
         </div>
  </body>
 </html>
