--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="geral">
             <div id="cabecalho">
                 <h1 style ="text-align:center;" >
-                   <img src="logo.png" witch = "300px" height = "400px" class="rounded-circle"/>
+                   <img src="logo trufa (1).png" witch = "300px" height = "400px" class="rounded-circle"/>
                 </h1>
             </div>
             <div id="principal">
