--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
             <div id="rodape"></div>
             <p style= "text-align:center;" > <b>ENTRE EM CONTATOS ATRAVÉS DO WHATSAPP</b> </p>
-            <img src= "qr.png" witch = "300px" height = "539px" style = "float : left" /> 
+            <img src= "WhatsApp Image 2022-05-01 at 09.52.03 (1).jpeg" witch = "300px" height = "539px" style = "float : left" /> 
         </div>
  </body>
 </html>
